--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -3,11 +3,20 @@
 
 = How to Install googledrivesync_chrome =
 
+== On Windows 32 bits ==
+
   * Download last version;
   * Unzip file downloaded;
-  * Copy all file in "C:\Program Files (x86)\Google\Drive" or "C:\Program Files\Google\Drive" directory;
-  * Double-click on googledrivesync_chrome.reg
+  * Copy all file in "C:\Program Files\Google\Drive";
+  * Double-click on googledrivesync_chrome_32.reg
 
-== googledrivesync_chrome.reg ==
+== On Windows 64 bits ==
+
+  * Download last version;
+  * Unzip file downloaded;
+  * Copy all file in "C:\Program Files (x86)\Google\Drive";
+  * Double-click on googledrivesync_chrome_64.reg
+
+=== googledrivesync_chrome.reg ===
 
 This file replace googledrivesync.exe by googledrivesync_chrome.wsf for openning all google documents with Google Chrome.
