--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -17,6 +17,6 @@
   * Copy all file in "C:\Program Files (x86)\Google\Drive";
   * Double-click on googledrivesync_chrome_64.reg
 
-=== googledrivesync_chrome.reg ===
+=== googledrivesync_chrome_XX.reg ===
 
 This file replace googledrivesync.exe by googledrivesync_chrome.wsf for openning all google documents with Google Chrome.
