--- a/wiki/googledrivesync_chrome.wiki
+++ b/wiki/googledrivesync_chrome.wiki
@@ -3,7 +3,7 @@
 
 = What is googledrivesync_chrome ? =
 
-To using Google Documents in offline mode with Google Drive with an environement where is not possible to have Google Chrome as default browser, you can't use double-click in Windows Explorer on file .gdoc and others.
+To use Google Documents in offline mode with Google Drive and an environement where is not possible to have Google Chrome as default browser, you can't use double-click in Windows Explorer on file .gdoc and others.
 
 "googledrivesync_chrome" is a Windows Script to open Chrome on a double-click of Google Doucments file in Google Drive directory.
 
