--- a/wiki/googledrivesync_chrome.wiki
+++ b/wiki/googledrivesync_chrome.wiki
@@ -7,6 +7,12 @@ To use Google Documents in offline mode with Google Drive and an environement wh
 
 "googledrivesync_chrome" is a Windows Script to open Chrome on a double-click of Google Doucments file in Google Drive directory.
 
+= Tests in progress... =
+
+  * Windows 7 64 bits
+  * Windows XP 32 bits (next version will be ok)
+  * Later: Windows Vista
+
 = Details =
 
   * How to [install] googledrivesync_chrome.
