--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -6,6 +6,10 @@
 Unzip and copy all files of googledrivesync_chrome package where you want to install the script.
 Then run googledrivesync_chrome.wsf with /install argument to setup the script in Windows registry.
 
+== Download last version ==
+
+[https://googledrivesync-chrome.googlecode.com/svn/trunk/googledrivesync_chrome.wsf Last version of googledrivesync_chrome.wsf]
+
 == Example ==
 
   * Download last version;
